[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/battle_hud/switch_menu.gd" id="1"]

[node name="SwitchMenu" type="PanelContainer"]
custom_minimum_size = Vector2(350, 200)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Select Replacement"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MemberContainer" type="VBoxContainer" parent="VBox/ScrollContainer" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="VBox" unique_name_in_owner=true]
layout_mode = 2
text = "Back"
